erDiagram
    USUARIO ||--o{ EQUIPO : "crea"
    USUARIO ||--o{ NOTIFICACION : "recibe"
    USUARIO ||--o{ SOLICITUD : "candidato"
    USUARIO ||--o{ SOLICITUD : "decisor"
    USUARIO ||--o{ TORNEO : "organiza"
    USUARIO ||--o{ SEGUIMIENTO_TORNEO : "sigue"
    USUARIO ||--o{ ELO_HISTORIAL : "tiene historial ELO"

    EQUIPO ||--|| USUARIO : "creador"
    EQUIPO ||--o{ EQUIPO_MIEMBROS : "tiene"
    EQUIPO_MIEMBROS ||--|| USUARIO : "miembro"
    EQUIPO ||--o{ SOLICITUD : "recibe"
    EQUIPO ||--o{ INSCRIPCION : "participa"
    EQUIPO ||--o{ ENCUENTRO : "local"
    EQUIPO ||--o{ ENCUENTRO : "visitante"

    TORNEO ||--o{ GRUPO : "posee"
    TORNEO ||--o{ JORNADA : "planifica"
    TORNEO ||--o{ INSCRIPCION : "gestiona"
    TORNEO ||--o{ SOLICITUD : "recibe inscripciones"
    TORNEO ||--o{ SEGUIMIENTO_TORNEO : "es seguido"

    GRUPO ||--o{ INSCRIPCION : "agrupa"

    JORNADA ||--o{ ENCUENTRO : "contiene"

    ENCUENTRO ||--o{ SET : "tiene"
    ENCUENTRO ||--o{ SOLICITUD_APLAZAMIENTO : "gestiona"
    ENCUENTRO ||--o{ ELO_HISTORIAL : "genera"

    USUARIO {
        bigint id PK
        int elo
        string nombre UK
        string email
        text imagenPerfil
        string password
        date fechaNacimiento
        boolean eloProvisional
        boolean notificacionesPartidos
        int diasAntelacionPartidos
        string role
        string googleId UK
    }

    NOTIFICACION {
        bigint id PK
        bigint usuarioId FK
        string asunto
        string cuerpo
        boolean leido
        boolean pendienteDeAccion
        bigint referenciaId
        string tipo
        timestamp fechaCreacion
    }

    SOLICITUD {
        bigint id PK
        bigint candidato_id FK
        bigint decisor_id FK
        bigint equipo_id FK
        bigint torneo_id FK
        string estado
        string tipo_solicitud
        timestamp fecha_creacion
    }

    EQUIPO {
        bigint id PK
        string nombreEquipo UK
        string descripcion
        string estado
        bigint creador_id FK
        string codigo_equipo UK
        timestamp fecha_creacion
    }

    EQUIPO_MIEMBROS {
        bigint equipo_id PK, FK
        bigint usuario_id PK, FK
    }

    TORNEO {
        bigint id PK
        bigint idOrganizador FK
        string nombre
        boolean privado
        string codigoTorneo UK
        int numGrupos
        int equiposPorGrupo
        boolean tienePlayoff
        string tipoTorneo
        boolean idaVueltaPlayoff
        string estado
        date fechaInicio
        date fechaFin
        date fechaLimiteInscripcion
        int puntosVictoria
        int puntosEmpate
        int puntosDerrota
        string formatoPartidos
        string criterioDesempate
        string diasDisponibles
        string horaInicio
        string horaFin
        int duracionPartido
        text fechasExcluidas
        string estrategiaDistribucion
        int diasEntreJornadas
        string estrategiaPlayoff
        int diasEntrePlayoff
        string rondaInicioPlayoff
    }

    GRUPO {
        bigint id PK
        bigint idTorneo FK
        string nombreGrupo
    }

    INSCRIPCION {
        bigint id PK
        bigint idTorneo FK
        bigint idEquipo FK
        bigint idGrupo FK
        int partidosJugados
        int partidosGanados
        int partidosEmpatados
        int partidosPerdidos
        string estadoInscripcion
        int puntosLiga
        int setsGanados
        int setsPerdidos
    }

    JORNADA {
        bigint id PK
        bigint idTorneo FK
        int numeroJornada
        string tipoFase
        string formatoJornada
        string estado
        date fechaInicio
        date fechaFin
    }

    ENCUENTRO {
        bigint id PK
        bigint idJornada FK
        bigint idEquipoLocal FK
        bigint idEquipoVisitante FK
        string estadoEncuentro
        timestamp fechaRealizacion
    }

    SET {
        bigint id PK
        bigint idEncuentro FK
        int numeroSet
        int golesLocal
        int golesVisitante
    }

    SOLICITUD_APLAZAMIENTO {
        bigint id PK
        bigint idEncuentro FK
        bigint idEquipoSolicitante FK
        timestamp fechaSolicitada
        string estado
    }

    SEGUIMIENTO_TORNEO {
        bigint id PK
        bigint usuarioId FK
        bigint torneoId FK
        timestamp fechaCreacion
    }

    ELO_HISTORIAL {
        bigint id PK
        bigint idUsuario FK
        bigint idEncuentro FK
        int eloAnterior
        int eloNuevo
        string resultado
        timestamp fecha
    }
